fix(simplicity): remove text-wrap

--- a/styles/_simplicity.scss
+++ b/styles/_simplicity.scss
@@ -3,6 +3,5 @@
   flex-direction: column;
   row-gap: 2rem;
   padding: 5rem;
-  text-wrap: balance;
   background-color: var(--color-primary);
 }
